--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,31 @@
+body{
+    background-color: #fff;
+}
+
+h1{
+    font-size: 3.5em;
+    text-align: center;
+    text-decoration: underline;
+}
+
+h3{
+    font-size: 2.5em;
+    text-align: center;
+}
+
 #grid{
-    width: 400px;
-    height: 300px;
+    width: 800px;
+    height: 600px;
     display: flex;
-    flex-wrap: wrap;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr); /* 4 columns */
+    grid-template-rows: repeat(3, 1fr); /* 3 rows */
+    gap: 5px; /* added gap between grid items */    
+    margin: auto;
+    justify-content: center;
+}
+
+#grid img {
+  width: 200px;
+  height: 150px;
 }
